[tool.poetry]
name = "dlphxpy"
version = "0.1.0"
description = ""
authors = ["SENHAJI RHAZI Hamza <hamza.senhajirhazi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
ipython = "^8.18.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
